--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "hhhah",
+  "name": "hotshot-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd-mobile": "^2.2.0-beta.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
