--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "8.0.4",
     "babel-plugin-import": "^1.11.0",
     "babel-plugin-named-asset-import": "^0.3.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-react-app": "^7.0.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
@@ -45,7 +46,10 @@
     "react-app-polyfill": "^0.2.0",
     "react-dev-utils": "^7.0.1",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -121,8 +125,10 @@
         {
           "libraryName": "antd-mobile",
           "style": "css"
-        }
+        },
+        "transform-decorators-legacy"
       ]
     ]
-  }
+  },
+  "proxy":"http://localhost:9093"
 }
