--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
+    "cookie-parser": "^1.4.3",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -130,5 +131,5 @@
       ]
     ]
   },
-  "proxy":"http://localhost:9093"
+  "proxy": "http://localhost:9093"
 }
